web/app/globals.css
:root {
  --background: hsl(0, 0%, 4%);
  --foreground: hsl(0, 0%, 93%);
  --background-light: hsl(0, 0%, 10%);

  --konbini-red: #f71c12;
  --konbini-yellow: #fdc607;

  --font-color-dark: hsl(0, 0%, 67%);
  --font-color-light: hsl(0, 0%, 93%);
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-size: 12px;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 100%;
  margin-inline: auto;
  padding: 1rem;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

header {
  margin-bottom: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

@media (max-width: 768px) {
  body {
    padding: 0;
  }
}

